# agent-readiness-fixtures

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  manifest.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
fixtures/broken/: main.py  run.sh
fixtures/good/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
fixtures/good/.github/workflows/: ci.yml
fixtures/good/src/good_fixture/: __init__.py  __main__.py  cli.py
fixtures/good/tests/: test_cli.py
fixtures/monorepo/: .gitignore  AGENTS.md  README.md  package.json  turbo.json
fixtures/monorepo_bazel/: README.md  WORKSPACE
fixtures/monorepo_bazel/client/: BUILD
fixtures/monorepo_bazel/srv/: BUILD
fixtures/monorepo_convention/: README.md
fixtures/monorepo_pnpm/: README.md  package.json
fixtures/multi_repo_workspace/: AGENTS.md  README.md  materialize.sh
fixtures/multi_repo_workspace/alpha-svc/: README.md
fixtures/multi_repo_workspace/beta-lib/: README.md
fixtures/multi_repo_workspace/gamma-cli/: MARKER_GIT_REPO  README.md
fixtures/noisy/: Makefile  README.md  pyproject.toml
fixtures/noisy/tests/: test_smoke.py
fixtures/python_thin_gitignore/: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
fixtures/python_thin_gitignore/.github/workflows/: ci.yml
fixtures/python_thin_gitignore/src/thin_pkg/: __main__.py  cli.py
fixtures/python_thin_gitignore/tests/: test_cli.py
tools/: list_fixtures.py
(+5 files in other folders)
