[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "good-fixture"
version = "0.1.0"
description = "Healthy fixture repo for the agent-readiness fixture pack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
good-fixture = "good_fixture.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/good_fixture"]
